--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<p class="subtitle has-text-white is-7">0-60 mph</p>
 					</div>
 					<div id="c" class="center-column" style="border-left: 1px solid gray;">
-						<p class="title has-text-white"><span class="is-size-5">+</span>200<span class="is-size-4">mph</span></p>
+						<p class="title has-text-white">208<span class="is-size-4">mph</span></p>
 						<p class="subtitle is-7 has-text-white">Top Speed</p>
 					</div>
 					<div id="d" class="center-column" style="border-left: 1px solid gray;">
