--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						</p>
 					</div>
 					<div id="b" class="center-column">
-						<p class="title has-text-white">
+						<p class="title has-text-white is-size-3">
 							<i class="fas fa-tachometer-alt has-text-grey-light"
 							style="width: 0.75em; height: 0.75em;">
 							</i>
@@ -70,11 +70,11 @@
 						<p class="subtitle has-text-white is-7">0-60 mph</p>
 					</div>
 					<div id="c" class="center-column" style="border-left: 1px solid gray;">
-						<p class="title has-text-white">208<span class="is-size-4">mph</span></p>
+						<p class="title is-size-3 has-text-white">208<span class="is-size-4">mph</span></p>
 						<p class="subtitle is-7 has-text-white">Top Speed</p>
 					</div>
 					<div id="d" class="center-column" style="border-left: 1px solid gray;">
-						<p class="title has-text-white"><span class="is-size-5">+</span>460</span><span class="is-size-4">kw</span></p>
+						<p class="title is-size-3 has-text-white"><span class="is-size-5">+</span>460</span><span class="is-size-4">kw</span></p>
 						<p class="subtitle is-7 has-text-white">Horsepower</p>
 					</div>
 					<div id="e" class="center-column">
